added validation checks, actuator configs and swagger documentation dependency

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -8,3 +8,10 @@ spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQLDialect
 #creates table if they doesn't exists or updates the existing ones
 spring.jpa.hibernate.ddl-auto=update
 
+management.endpoints.web.exposure.includes=*
+management.info.env.enabled=true
+management.endpoint.health.show-details=always
+
+info.app.name=Spring boot restful web services
+info.app.version=1.0.0
+
